Test deploy process

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="home.html">
-                        <img src="gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
+                        <img src="public/gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
                     </a>
                 </div>
                 
@@ -241,7 +241,7 @@
                 <!-- Logo -->
                 <div class="flex items-center mb-4 md:mb-0">
                     <a href="home.html">
-                        <img src="gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
+                        <img src="public/gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
                     </a>
                 </div>
                 
