--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="flex justify-between items-center py-4">
                 <!-- Logo -->
                 <div class="flex items-center">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="public/gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
                     </a>
                 </div>
@@ -240,7 +240,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <!-- Logo -->
                 <div class="flex items-center mb-4 md:mb-0">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="public/gh-labs-logo.svg" alt="GH+ Labs" class="h-12 w-auto hover:opacity-80 transition-opacity">
                     </a>
                 </div>
