edit main pages

--- a/kenya-power-data.html
+++ b/kenya-power-data.html
@@ -150,25 +150,6 @@
             <div class="lg:col-span-3">
                 <div class="bg-white rounded-lg shadow-sm p-8">
                     <h2 class="text-3xl font-bold text-gray-900 mb-6">Kenya MF Power Data</h2>
-                    
-                    <!-- Description -->
-                    <div class="prose max-w-none mb-8">
-                        <p class="text-gray-700 mb-4">
-                            This is a repository of data collected from a group of Aucma CFD-50 vaccine storage 
-                            refrigerators (hereafter referred to as a "Device" or "Devices") from 2017 Q2 through
-                            2025 Q2. The Devices were designed by the New Horizons team of Global Health Labs.
-                        </p>
-                        <p class="text-gray-700 mb-4">
-                            The data is an AC power subset of the complete engineering data stream from the Devices, 
-                            which includes temperature, error messages, and other sensors for analyzing refrigerator 
-                            performance. Data from those sensors and debugging messages are not included in the MF Power Data.
-                        </p>
-                        <p class="text-gray-700">
-                            The New Horizons team analyzed the AC power data to improve power conditioning equipment 
-                            standards and reduce damage from AC power problems. This work was not exhaustive and the 
-                            repository aims to enable researchers to extend it.
-                        </p>
-                    </div>
 
                     <!-- Search and Order -->
                     <div class="flex flex-col sm:flex-row gap-4 mb-6">
@@ -187,203 +168,98 @@
 
                     <!-- Dataset Count -->
                     <div class="mb-6">
-                        <p class="text-gray-600 font-medium">7 datasets found</p>
+                        <p class="text-gray-600 font-medium">90 datasets found</p>
                     </div>
 
                     <!-- Dataset List -->
                     <div class="space-y-4 mb-8">
-                        <!-- Kenya Q2 2017 -->
+                        <!-- Kenya January 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q2 2017</h3>
-                                    <p class="text-sm text-gray-500">44 MB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya January 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q2 2017')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2017_2.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
 
-                        <!-- Kenya Q3 2017 -->
+                        <!-- Kenya February 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q3 2017</h3>
-                                    <p class="text-sm text-gray-500">58 MB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya February 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q3 2017')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2017_3.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
 
-                        <!-- Kenya Q4 2017 -->
+                        <!-- Kenya March 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q4 2017</h3>
-                                    <p class="text-sm text-gray-500">240 MB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya March 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q4 2017')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2017_4.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
 
-                        <!-- Kenya Q1 2018 -->
+                        <!-- Kenya April 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q1 2018</h3>
-                                    <p class="text-sm text-gray-500">278 MB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya April 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q1 2018')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2018_1.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
 
-                        <!-- Kenya Q2 2018 -->
+                        <!-- Kenya May 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q2 2018</h3>
-                                    <p class="text-sm text-gray-500">1.8 GB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya May 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q2 2018')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2018_2.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
 
-                        <!-- Kenya Q3 2018 -->
+                        <!-- Kenya June 2017 -->
                         <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
                             <div class="flex items-center space-x-4">
                                 <span class="material-icons text-green-600 text-2xl">description</span>
                                 <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q3 2018</h3>
-                                    <p class="text-sm text-gray-500">2.7 GB</p>
+                                    <h3 class="font-medium text-gray-900">Kenya June 2017</h3>
                                 </div>
                             </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q3 2018')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2018_3.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Kenya Q4 2018 -->
-                        <div class="flex items-center justify-between p-4 border border-gray-200 rounded-lg hover:bg-gray-50">
-                            <div class="flex items-center space-x-4">
-                                <span class="material-icons text-green-600 text-2xl">description</span>
-                                <div>
-                                    <h3 class="font-medium text-gray-900">Kenya Q4 2018</h3>
-                                    <p class="text-sm text-gray-500">7.2 GB</p>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
-                                    Explore
-                                    <span class="material-icons text-sm ml-1">arrow_drop_down</span>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#" onclick="showMoreInfo('Kenya Q4 2018')">
-                                        <span class="material-icons text-sm">info</span>
-                                        More information
-                                    </a>
-                                    <a href="kenya/Kenya_2018_4.txt" download>
-                                        <span class="material-icons text-sm">download</span>
-                                        Download
-                                    </a>
-                                </div>
-                            </div>
+                            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center text-sm font-medium">
+                                <span class="material-icons text-sm mr-1">download</span>
+                                Download
+                            </button>
                         </div>
                     </div>
 
                     <!-- Pagination -->
-                    <div class="flex justify-center items-center space-x-2">
+                    <div class="flex justify-center items-center space-x-2 mb-8">
                         <button class="px-3 py-2 text-gray-500 hover:text-gray-700">Previous</button>
                         <button class="px-3 py-2 bg-blue-600 text-white rounded">1</button>
                         <button class="px-3 py-2 text-gray-500 hover:text-gray-700">2</button>
@@ -391,6 +267,25 @@
                         <span class="px-3 py-2 text-gray-500">...</span>
                         <button class="px-3 py-2 text-gray-500 hover:text-gray-700">10</button>
                         <button class="px-3 py-2 text-gray-500 hover:text-gray-700">Next</button>
+                    </div>
+
+                    <!-- Supporting Documentation -->
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-4">Supporting Documentation</h3>
+                        <ul class="space-y-2">
+                            <li class="flex items-center space-x-2">
+                                <span class="material-icons text-gray-400 text-sm">description</span>
+                                <span class="text-gray-700">reporting_fridges_per_month.csv</span>
+                            </li>
+                            <li class="flex items-center space-x-2">
+                                <span class="material-icons text-gray-400 text-sm">description</span>
+                                <span class="text-gray-700">upload_statistics_per_month.csv</span>
+                            </li>
+                            <li class="flex items-center space-x-2">
+                                <span class="material-icons text-gray-400 text-sm">description</span>
+                                <span class="text-gray-700">location_info.csv</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
