--- a/example-new-page.html
+++ b/example-new-page.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Global CSS -->
+    <link href="public/global.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
